[package]
name = "rust-actix-crud-mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono = { version = "0.4.19", features = ["serde"] }
mongodb = "2"
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session","redis-actor-session"] }